--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -242,6 +242,8 @@ h1.parent_title a {
 header {
     transition: all 0.5s ease;
     padding-bottom: 0;
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
+    z-index: 100;
 }
 .mat-toolbar-row {
     height: auto !important;
@@ -369,14 +371,14 @@ header.about-us, header.about-us .navbar .dropdown-content, main.about-us .btn {
 }
 main a,
 main.about-us a {
-    color: #009e99 !important;
+    color: #009e99;
 }
 
 header.running-your-organisation, header.running-your-organisation .navbar .dropdown-content, main.running-your-organisation .btn {
-    background-color: #303f9f;
+    background-color: #B71C1C;
 }
 main.running-your-organisation a {
-    color: #303f9f !important;
+    color: #B71C1C !important;
 }
 
 header.jobs, header.jobs .navbar .dropdown-content, main.jobs .btn {
@@ -418,7 +420,14 @@ header.projects-campaigns, header.projects-campaigns .navbar .dropdown-content, 
     background-color: #00838f;
 }
 main.projects-campaigns a {
-    color: #00838f;
+    color: #00838f !important;
+}
+
+header.setting-up-a-charity, header.setting-up-a-charity .navbar .dropdown-content, main.setting-up-a-charity .btn {
+    background-color: #0D47A1;
+}
+main.setting-up-a-charity a {
+    color: #0D47A1 !important;
 }
 
 header.press-media, header.press-media .navbar .dropdown-content, main.press-media .btn,
