Refactoring and recent wee changes

--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -2,6 +2,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600,700);
 @import url(https://fonts.googleapis.com/css?family=Lato:900);
 
+@import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
+
 
 // Base variables ==============================================================
 
@@ -130,6 +132,9 @@ a:not([href]):not([tabindex]):hover {
 
 main.projects-campaigns {
     padding: 0;
+    h1 {
+        padding-top: 1rem;
+    }
 }
 main {
     padding: 0 0 0.5rem;
@@ -250,7 +255,7 @@ header {
     max-height: 64px;
 }
 .mat-toolbar {
-    background-color: transparent;
+    background-color: transparent !important;
     box-shadow: none;
     font-size: 1rem !important;
     padding: 0 !important;
@@ -410,17 +415,17 @@ main.events.the-gathering a {
 }
 
 header.events, header.events .navbar .dropdown-content, main.events .btn {
-    background-color: #263238;
+    background-color: #009e99;
 }
 main.events a {
-    color: #263238 !important;
+    color: #009e99 !important;
 }
 
 header.projects-campaigns, header.projects-campaigns .navbar .dropdown-content, main.projects-campaigns .btn {
     background-color: #00838f;
 }
 main.projects-campaigns a {
-    color: #00838f !important;
+    color: #00838f;
 }
 
 header.library, header.library .navbar .dropdown-content, main.library .btn,
