--- a/src/app/components/campaigns/campaigns-page.component.html
+++ b/src/app/components/campaigns/campaigns-page.component.html
@@ -5,8 +5,8 @@
 </div> -->
 <div style="background: url('http://www.scvo.org.uk/wp-content/uploads/2016/04/Glasgow-Bike-Shed-image-2-1.jpg') no-repeat center center; background-size:cover; height:250px; width:100%">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-12" style="margin: 0 15px; padding: 0 1rem; background-color: rgba(0,0,0,0.4); display:block; height:250px;">
+        <div class="row" style="margin: 0; background-color: rgba(0,0,0,0.8); display:block; height:250px;">
+            <div class="col-sm-12">
                 <p>&nbsp;</p>
                 <p>&nbsp;</p>
                 <h2 class="white-text"><a [routerLink]="['/projects-campaigns/scottish-charity-awards']">Scottish Charity Awards</a></h2>
@@ -17,8 +17,8 @@
 </div>
 <div style="background: url('https://images.unsplash.com/photo-1492554929733-56d94d6b2fc3?dpr=1&amp;auto=format&amp;fit=crop&amp;w=1500&amp;h=1000&amp;q=80&amp;cs=tinysrgb&amp;crop=&amp;bg=') no-repeat top center; background-size:cover; height:175px; width:100%">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-12" style="margin: 0 15px; padding: 0 1rem; background-color: rgba(0,0,0,0.4); display:block; height:175px;">
+        <div class="row" style="margin: 0; background-color: rgba(0,0,0,0.8); display:block; height:175px;">
+            <div class="col-sm-12">
                 <p>&nbsp;</p>
                 <h2 class="white-text"><a [routerLink]="['/projects-campaigns/datawareness']">Datawareness</a></h2>
                 <p class="white-text">Helping charities and voluntary organisations understand the risks and opportunities assocated with using data in the digital age. <a [routerLink]="['/projects-campaigns/datawareness']">Read more&hellip;</a></p>
@@ -28,8 +28,8 @@
 </div>
 <div style="background: url('https://images.unsplash.com/photo-1485282451181-373ce0a1f879?dpr=1&amp;auto=format&amp;fit=crop&amp;w=1500&amp;h=1000&amp;q=80&amp;cs=tinysrgb&amp;crop=&amp;bg=') no-repeat center center; background-size:cover; height:175px; width:100%">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-12" style="margin: 0 15px; padding: 0 1rem; background-color: rgba(0,0,0,0.4); display:block; height:175px;">
+        <div class="row" style="margin: 0; background-color: rgba(0,0,0,0.8); display:block; height:175px;">
+            <div class="col-sm-12">
                 <p>&nbsp;</p>
                 <h2 class="white-text"><a [routerLink]="['/projects-campaigns/open-government']">Open Government</a></h2>
                 <p class="white-text">Open Government project. <a [routerLink]="['/projects-campaigns/open-government']">Read more&hellip;</a></p>
@@ -39,8 +39,8 @@
 </div>
 <div style="background: url('https://images.unsplash.com/photo-1456162018889-1d2b969f7084?dpr=1&auto=format&fit=crop&w=1500&h=997&q=80&cs=tinysrgb&crop=&bg=') no-repeat center center; background-size:cover; height:175px; width:100%">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-sm-12" style="margin: 0 15px; padding: 0 1rem; background-color: rgba(0,0,0,0.4); display:block; height:175px;">
+        <div class="row" style="margin: 0; background-color: rgba(0,0,0,0.8); display:block; height:175px;">
+            <div class="col-sm-12">
                 <p>&nbsp;</p>
                 <h2 class="white-text"><a [routerLink]="['/projects-campaigns/welfare-reform']">Welfare reform</a></h2>
                 <p class="white-text">Tackling the challenges brought about by welfare reform. <a [routerLink]="['/projects-campaigns/welfare-reform']">Read more&hellip;</a></p>
