--- a/src/app/components/services/services-page.component.html
+++ b/src/app/components/services/services-page.component.html
@@ -37,7 +37,7 @@
                 <!-- <img md-card-image src="/app/assets/images/services/"> -->
                 <md-card-content>
                     <p>
-                        Right now in Scotland, one in five adults lack Basic Digital Skills. These are the skills of safely communicating, transacting, managing information, problem solving and creating content to use the internet as part of modern day to day life. The people are more likely not to have these skills are older, poorer and facing other forms of disadvantage. In order to tackle exclusion and inequalities, our work focuses on equipping everyone with these skills.
+                        Right now in Scotland, one in five adults lack Basic Digital Skills. These are the skills of safely communicating, transacting, managing information, problem solving and creating content to use the internet as part of modern day to day life.
                     </p>
                 </md-card-content>
                 <md-card-actions>
