--- a/src/app/assets/icons/css/_fontello.scss
+++ b/src/app/assets/icons/css/_fontello.scss
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?94957274');
-  src: url('../font/fontello.eot?94957274#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?94957274') format('woff2'),
-       url('../font/fontello.woff?94957274') format('woff'),
-       url('../font/fontello.ttf?94957274') format('truetype'),
-       url('../font/fontello.svg?94957274#fontello') format('svg');
+  src: url('../font/fontello.eot?37564294');
+  src: url('../font/fontello.eot?37564294#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?37564294') format('woff2'),
+       url('../font/fontello.woff?37564294') format('woff'),
+       url('../font/fontello.ttf?37564294') format('truetype'),
+       url('../font/fontello.svg?37564294#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?94957274#fontello') format('svg');
+    src: url('../font/fontello.svg?37564294#fontello') format('svg');
   }
 }
 */
@@ -63,6 +63,7 @@
 .fa-info-circled:before { content: '\e705'; } /* '' */
 .fa-eye:before { content: '\e70a'; } /* '' */
 .fa-trash-empty:before { content: '\e729'; } /* '' */
+.fa-login:before { content: '\e740'; } /* '' */
 .fa-bold:before { content: '\e77a'; } /* '' */
 .fa-italic:before { content: '\e77b'; } /* '' */
 .fa-list-alt:before { content: '\e790'; } /* '' */
@@ -87,4 +88,5 @@
 .fa-briefcase:before { content: '💼'; } /* '\1f4bc' */
 .fa-floppy:before { content: '💾'; } /* '\1f4be' */
 .fa-calendar:before { content: '📅'; } /* '\1f4c5' */
+.fa-lock:before { content: '🔒'; } /* '\1f512' */
 .fa-link:before { content: '🔗'; } /* '\1f517' */
