Numerous wee mockup updates

--- a/src/app/components/admin/page-editor/page-editor.component.html
+++ b/src/app/components/admin/page-editor/page-editor.component.html
@@ -1,6 +1,5 @@
 <button type="button" class="btn pull-right" (click)="save()">
-    Save
-    <!-- <i class="fa fa-fw fa-floppy"></i> -->
+    Save <span class="fa fa-save"></span>
 </button>
 
 <h2>Page editor</h2>
@@ -15,9 +14,8 @@
     <textarea [(ngModel)]="translations[selectedLanguage]" id="page-editor"></textarea>
 </div>
 
-<button type="button" class="btn right" (click)="save()">
-    Save
-    <!-- <i class="fa fa-fw fa-floppy"></i> -->
+<button type="button" class="btn pull-right" (click)="save()">
+    Save <span class="fa fa-save"></span>
 </button>
 
 <!-- <div materialize="toast" [materializeActions]="toasterActions"></div> -->
