--- a/src/app/components/admin/page-list/page-list.component.html
+++ b/src/app/components/admin/page-list/page-list.component.html
@@ -1,4 +1,6 @@
-<button class="btn pull-right" (click)="showNewPage()">New page</button>
+<button class="btn pull-right" (click)="showNewPage()">
+    New page <span class="fa fa-plus"></span>
+</button>
 
 <h2 class="margin-bottom">Static page editor</h2>
 
