--- a/src/app/components/pages/page.component.html
+++ b/src/app/components/pages/page.component.html
@@ -1,6 +1,9 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 col-md-10 col-lg-9 page-content">
+            <div class="admin-edit pull-right" *ngIf="showEdit">
+                <a [routerLink]="['/admin/page-editor', slugId]" class="btn"><span class="fa fa-pencil"></span></a>
+            </div>
             <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div>
         </div>
         <div class="col-sm-12 col-md-2 col-lg-3 page-sidebar">
