--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -52,6 +52,9 @@ body {
 md-button {
     background-color: transparent;
 }
+button {
+    cursor: pointer;
+}
 body, p, li, a {
     font-weight: 400;
 }
@@ -128,6 +131,12 @@ a:not([href]):not([tabindex]):hover {
     max-width: 100%;
     height: auto;
     display:block
+}
+
+.form-group {
+    select {
+        width: 100%;
+    }
 }
 
 main.projects-campaigns h1 {
@@ -462,7 +471,9 @@ main.policy-research button {
 
 main.policy-research share-button a,
 main.policy-research share-button button,
-a.btn {
+a.btn,
+button,
+main a.btn {
     color: #fff !important;
 }
 
@@ -760,6 +771,40 @@ a.btn {
     }
     dd.inline {
         margin-left: 0.33rem;
+    }
+}
+.event-result {
+    p {
+        margin: 0;
+    }
+    .date-detail {
+        font-weight: bold;
+        .weekday {
+            text-transform: uppercase;
+            font-size: 1.4rem;
+        }
+        .date {
+            font-size: 1.1rem;
+        }
+    }
+    h3.cost {
+        float: right;
+        width: 3.5rem;
+        height: 3.5rem;
+        padding: 1rem 0 0;
+        margin: 0;
+        text-align: center;
+    }
+    h3.cost.paid {
+        color: #fff;
+        background: #009e99;
+    }
+    h3.cost.free {
+        color: #000;
+        background: #ccc;
+        text-transform: uppercase;
+        font-size: 1rem;
+        padding: 1.3rem 0 0;
     }
 }
 
