--- a/src/app/components/events/event-detail.component.html
+++ b/src/app/components/events/event-detail.component.html
@@ -2,95 +2,90 @@
     <div class="row title">
         <div class="col s12">
             <h1>
-                SCVO Evidence Library
+                SCVO Events &amp; Training
             </h1>
         </div>
     </div>
 
-    <div *ngIf="documents && documents.length > 1">
+    <div *ngIf="events && events.length > 1">
         <h2 style="color:red">Duplicate records:</h2>
     </div>
 
-    <div *ngFor="let document of documents" class="row title document-detail">
+    <div *ngFor="let event of events" class="row title event-detail">
         <div class="col-sm-12 col-md-9">
-            <h2 *ngIf="document._source.title">
-                {{document._source.title}}
+            <h2 *ngIf="event._source.title">
+                {{event._source.title}}
             </h2>
 
-            <dl *ngIf="document._source.date_published">
-                <dt class="inline">Year of Publication:</dt>
+            <h3>Event details</h3>
+
+            <dl *ngIf="event._source.dateStart">
+                <dt class="inline">Starts:</dt>
                 <dd class="inline">
-                    {{document._source.date_published}}
+                    {{event._source.dateStart | date:'d MMMM y HH:mm'}}
                 </dd>
             </dl>
 
-            <dl *ngIf="document._source.author">
-                <dt class="inline">Author:</dt>
+            <dl *ngIf="event._source.dateEnd">
+                <dt class="inline">Ends:</dt>
                 <dd class="inline">
-                    {{document._source.author}}
+                    {{event._source.dateEnd | date:'d MMMM y HH:mm'}}
                 </dd>
             </dl>
 
-            <dl *ngIf="document._source.comm_org">
-                <dt class="inline">Commissioner:</dt>
+            <dl *ngIf="event._source.venue">
+                <dt class="inline">Venue:</dt>
                 <dd class="inline">
-                    {{document._source.comm_org}}
+                    {{event._source.venue}}
                 </dd>
             </dl>
 
-            <dl *ngIf="document._source.date_posted">
-                <dt class="inline">Date Posted:</dt>
+            <dl *ngIf="event._source.trainer">
+                <dt class="inline">Trainer:</dt>
                 <dd class="inline">
-                    {{document._source.date_posted}}
+                    {{event._source.trainer}}
                 </dd>
             </dl>
 
-            <dl *ngIf="document._source.abstract">
-                <dt>Abstract:</dt>
-                <dd>
-                    {{document._source.abstract}}
-                </dd>
-            </dl>
-
-            <dl *ngIf="document._source.weblink_url && document._source.weblink_title">
-                <dt class="inline">View online:</dt>
+            <dl *ngIf="event._source.cost">
+                <dt class="inline">Cost:</dt>
                 <dd class="inline">
-                    <a href="http://{{document._source.weblink_url}}">
-                        <span *ngIf="document._source.weblink_title != 'NULL'">{{document._source.weblink_title}}</span>
-                        <span *ngIf="document._source.weblink_title == 'NULL'">{{document._source.weblink_url}}</span>
-                    </a>
+                    &pound;{{event._source.cost}}
                 </dd>
             </dl>
 
-            <dl *ngIf="document._source.library_classification">
-                <dt>Categories:</dt>
-                <dd>
-                    <ul>
-                        <li *ngFor="let category of document._source.library_classification">
-                            {{category}}
-                        </li>
-                    </ul>
-                </dd>
-            </dl>
-
-            <div *ngIf="document._source.attachments && document._source.attachments != null">
-                <h3>
-                    Downloads
-                </h3>
-                <p>
-                    <span class="fa fa-file-pdf-o"></span> <a href="{{document._source.attachments.Url}}">{{document._source.attachments.Name}}</a>
-                </p>
-                <!-- <pre>{{document._source.attachments | json}}</pre> -->
+            <br />
+            <div *ngIf="event._source.placesAvailable">
+                <div *ngIf="event._source.placesAvailable > 0 && event._source.placesAvailable < 5">
+                    <strong>Please note this course is almost fully booked!</strong>
+                </div>
+                <div *ngIf="event._source.placesAvailable <= 0">
+                    <strong>Please note this course is now fully booked!</strong>
+                </div>
             </div>
 
-            <dl *ngIf="document._source.Id && document._source.library_name">
-                <dt class="inline">SCVO Library Name (Salesforce):</dt>
-                <dd class="inline">
-                    <strong><a href="https://scvo.my.salesforce.com/{{document._source.Id}}" target="_blank">{{document._source.library_name}}</a></strong>
+            <dl *ngIf="event._source.description">
+                <dt>Event description:</dt>
+                <dd>
+                    {{event._source.description}}
                 </dd>
             </dl>
 
-            <!-- <small><pre>{{document._source | json}}</pre></small> -->
+            <!-- <dl *ngIf="event._source.notes">
+                <dt>Other information:</dt>
+                <dd>
+                    {{event._source.notes}}
+                </dd>
+            </dl> -->
+
+            <dl *ngIf="event._source.Id">
+                <dt class="inline">SCVO Event (Salesforce):</dt>
+                <dd class="inline">
+                    <strong><a href="https://scvo.my.salesforce.com/{{event._source.Id}}" target="_blank">{{event._source.Id}}</a></strong>
+                </dd>
+            </dl>
+
+            <!-- <small><pre>{{event._source | json}}</pre></small> -->
         </div>
     </div>
 </div>
