Added Disqus back in

--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -142,6 +142,9 @@ a:not([href]):not([tabindex]):hover {
 main.projects-campaigns h1 {
     padding-top: 1rem;
 }
+main.projects-campaigns {
+    padding-bottom: 0;
+}
 main {
     padding: 0 0 0.5rem;
     a:link {
@@ -156,7 +159,7 @@ main {
     a[href^="https://"]::after {
         font-family: 'FontAwesome';
         content: "\f08e";
-        margin-left: 0.25rem;
+        margin: 0 0.2rem;
         text-decoration: none;
         display: inline-block;
     }
@@ -164,8 +167,8 @@ main {
     a[href^="https://forms.scvo"]::after,
     a[href^="http://email.scvo"]::after,
     a[href^="https://email.scvo"]::after {
-        content: " ";
-        margin-left: 0;
+        content: "";
+        margin: 0;
     }
     .card a:link, a.btn:link {
         text-decoration: none;
@@ -352,6 +355,9 @@ main {
     }
     .list-inline.right {
         text-align: right;
+    }
+    .menu-top {
+        height: 64px;
     }
 }
 .mat-toolbar .brand {
