--- a/src/app/components/events/event-list.component.html
+++ b/src/app/components/events/event-list.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <div class="row search margin-bottom">
-        <div class="col-sm-12">
+        <div class="col-sm-12 col-md-8 col-lg-12">
             <div class="form-group">
                 <strong><label class="control-label" for="query">Keyword</label></strong>
                 <input type="text" id="query" class="form-control validate" [(ngModel)]="query" placeholder="Search for an event" (ngModelChange)="search()" autocomplete="off" />
