--- a/src/app/components/header/menu.component.html
+++ b/src/app/components/header/menu.component.html
@@ -1,5 +1,5 @@
 <li *ngFor="let menuItem of menuItems | keys">
-    <a [routerLink]="[menuItem.value.name]" data-beloworigin="true" data-constrainwidth="false">
+    <a [routerLink]="[menuItem.value.name]" data-beloworigin="true" data-constrainwidth="false" class="mat-ripple">
         {{menuItem.value.label | translate}}
         <!-- <span *ngIf="menuItem.value.submenu" class="material-icons arrow_drop_down right">arrow_drop_down</span> -->
     </a>
