--- a/src/app/assets/icons/css/_fontello.scss
+++ b/src/app/assets/icons/css/_fontello.scss
@@ -2,12 +2,12 @@
 
  @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?35966575');
-  src: url('../font/fontello.eot?35966575#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?35966575') format('woff2'),
-       url('../font/fontello.woff?35966575') format('woff'),
-       url('../font/fontello.ttf?35966575') format('truetype'),
-       url('../font/fontello.svg?35966575#fontello') format('svg');
+  src: url('../font/fontello.eot?31935826');
+  src: url('../font/fontello.eot?31935826#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?31935826') format('woff2'),
+       url('../font/fontello.woff?31935826') format('woff'),
+       url('../font/fontello.ttf?31935826') format('truetype'),
+       url('../font/fontello.svg?31935826#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -17,7 +17,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?35966575#fontello') format('svg');
+    src: url('../font/fontello.svg?31935826#fontello') format('svg');
   }
 }
 */
@@ -57,6 +57,7 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
+.fa-plus:before { content: '\2b'; } /* '+' */
 .fa-minus:before { content: '\2d'; } /* '-' */
 .fa-heart:before { content: '\2665'; } /* '♥' */
 .fa-pencil:before { content: '\270e'; } /* '✎' */
