--- a/src/app/components/posts/post-detail.component.html
+++ b/src/app/components/posts/post-detail.component.html
@@ -44,7 +44,7 @@
 
             <share-block [totalShare]="0"></share-block>
 
-            <!-- <disqus [shortname]="['scottish-council-for-voluntary-organisations']" [lang]="'en'" (comment)="onComment($event)"></disqus> -->
+            <disqus [shortname]="['scottish-council-for-voluntary-organisations']" [lang]="'en'" (comment)="onComment($event)"></disqus>
         </div>
         <div class="col-sm-12 col-md-2 col-lg-3 page-sidebar">
 
