Updated package versions and refactored AngularFire

--- a/src/app/components/posts/post-detail.component.html
+++ b/src/app/components/posts/post-detail.component.html
@@ -1,19 +1,19 @@
 <div class="container-fluid">
-    <div class="row ">
-        <div class="col-sm-12">
+    <!-- <div class="row ">
+        <div class="col-sm-12 offset-md-1 col-md-10 offset-lg-2 col-lg-8 page-content">
             <h2 class="header">Blog post</h2>
         </div>
-    </div>
+    </div> -->
     <div class="row">
-        <div class="col-sm-12 col-md-10 col-lg-9 page-content">
+        <div class="col-sm-12 offset-md-1 col-md-10 offset-lg-2 col-lg-8 page-content">
             <!-- <div class="markdown-content" dynamic-component [componentTemplate]="content" [componentContext]="{ appService: appService }" [componentModules]="modules"></div> -->
+
+            <h3 class="stc">Snap General Election ‘17</h3>
             <p><strong>April 19, 2017: <a [routerLink]="['/about/staff/craig-wilson']">Craig Wilson</a></strong></p>
 
             <share-block [totalShare]="0"></share-block>
 
-            <h3 class="stc">Snap General Election ‘17</h3>
-
-            <p class="subheading">Once more unto the breach</p>
+            <h5 class="subheading">Once more unto the breach</h5>
 
             <p>The Prime Minister has surprised the nation by announcing a snap General Election to be held on 8 June 2017.</p>
             <p>With the introduction of the Fixed Terms Parliament Act, it was expected that incumbents would no longer have the power to call an election when it most suited them.</p>
@@ -44,10 +44,10 @@
 
             <share-block [totalShare]="0"></share-block>
 
-            <disqus [shortname]="['scottish-council-for-voluntary-organisations']" [lang]="'en'" (comment)="onComment($event)"></disqus>
+            <!-- <disqus [shortname]="['scottish-council-for-voluntary-organisations']" [lang]="'en'" (comment)="onComment($event)"></disqus> -->
         </div>
-        <div class="col-sm-12 col-md-2 col-lg-3 page-sidebar">
+        <!-- <div class="col-sm-12 col-md-2 col-lg-3 page-sidebar">
 
-        </div>
+        </div> -->
     </div>
 </div>
