--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -268,7 +268,14 @@ header {
     z-index: 100;
     position: fixed;
     width: 100%;
+    height: 128px;
+    transition: height 0.2s ease-in-out;
+    overflow: hidden;
 }
+header.nav-up {
+    height: 64px;
+}
+
 main {
     padding-top: 128px;
 }
