--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -262,14 +262,13 @@ h1.parent_title a {
 }
 
 header {
-    transition: all 0.5s ease;
+    transition: background-color 0.75s ease, height 0.2s ease-in-out;
     padding-bottom: 0;
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.26);
     z-index: 100;
     position: fixed;
     width: 100%;
     height: 128px;
-    transition: height 0.2s ease-in-out;
     overflow: hidden;
 }
 header.nav-up {
