--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -411,9 +411,13 @@ main.about a {
     color: #009e99 !important;
 }
 
+header.running-a-charity, header.running-a-charity .navbar .dropdown-content, main.running-a-charity .btn,
+header.setting-up-a-charity, header.setting-up-a-charity .navbar .dropdown-content, main.setting-up-a-charity .btn,
 header.running-your-organisation, header.running-your-organisation .navbar .dropdown-content, main.running-your-organisation .btn {
     background-color: #B71C1C;
 }
+main.running-a-charity a,
+main.setting-up-a-charity a,
 main.running-your-organisation a {
     color: #B71C1C !important;
 }
@@ -460,12 +464,10 @@ main.projects-campaigns a {
     color: #00838f;
 }
 
-header.library, header.library .navbar .dropdown-content, main.library .btn,
-header.setting-up-a-charity, header.setting-up-a-charity .navbar .dropdown-content, main.setting-up-a-charity .btn {
+header.library, header.library .navbar .dropdown-content, main.library .btn {
     background-color: #0D47A1;
 }
-main.library a,
-main.setting-up-a-charity a {
+main.library a {
     color: #0D47A1 !important;
 }
 
