Updated colour scheme

--- a/src/app/app.styles.scss
+++ b/src/app/app.styles.scss
@@ -34,6 +34,7 @@ body {
     font-size: 1rem;
     min-height: 100%;
     background-color: #263238;
+    color: #212121;
 }
 .mat-button,
 .mat-card-title,
@@ -404,22 +405,22 @@ header.scroll {
 
 header, header .navbar .dropdown-content, main .btn,
 header.about, header.about .navbar .dropdown-content, main.about .btn {
-    background-color: #009e99;
+    background-color: #00838f;
 }
 main a,
 main.about a {
-    color: #009e99 !important;
+    color: #00838f !important;
 }
 
 header.running-a-charity, header.running-a-charity .navbar .dropdown-content, main.running-a-charity .btn,
 header.setting-up-a-charity, header.setting-up-a-charity .navbar .dropdown-content, main.setting-up-a-charity .btn,
 header.running-your-organisation, header.running-your-organisation .navbar .dropdown-content, main.running-your-organisation .btn {
-    background-color: #B71C1C;
+    background-color: #ab47bc;
 }
 main.running-a-charity a,
 main.setting-up-a-charity a,
 main.running-your-organisation a {
-    color: #B71C1C !important;
+    color: #ab47bc !important;
 }
 
 header.jobs, header.jobs .navbar .dropdown-content, main.jobs .btn {
@@ -431,16 +432,23 @@ main.jobs a {
 
 header.join-scvo, header.join-scvo .navbar .dropdown-content, main.join-scvo .btn,
 header.services, header.services .navbar .dropdown-content, main.services .btn {
-    background-color: #880e4f;
+    background-color: #1976d2;
 }
 main.join-scvo a,
 main.services a,
 main.services button {
-    color: #880e4f !important;
+    color: #1976d2 !important;
 }
 main.services a.mat-button:hover,
 main.services button:hover {
     text-decoration: none;
+}
+
+header.projects-campaigns, header.projects-campaigns .navbar .dropdown-content, main.projects-campaigns .btn {
+    background-color: #c2185b;
+}
+main.projects-campaigns a {
+    color: #c2185b;
 }
 
 header.events.the-gathering, header.events.the-gathering .navbar .dropdown-content, main.events.the-gathering .btn {
@@ -451,36 +459,29 @@ main.events.the-gathering a {
 }
 
 header.events, header.events .navbar .dropdown-content, main.events .btn {
-    background-color: #009e99;
+    background-color: #ab47bc;
 }
 main.events a {
-    color: #009e99 !important;
-}
-
-header.projects-campaigns, header.projects-campaigns .navbar .dropdown-content, main.projects-campaigns .btn {
-    background-color: #00838f;
-}
-main.projects-campaigns a {
-    color: #00838f;
+    color: #ab47bc !important;
 }
 
 header.library, header.library .navbar .dropdown-content, main.library .btn {
-    background-color: #0D47A1;
+    background-color: #dd2c00;
 }
 main.library a {
-    color: #0D47A1 !important;
+    color: #dd2c00 !important;
 }
 
 header.press-media, header.press-media .navbar .dropdown-content, main.press-media .btn,
 header.tags, header.tags .navbar .dropdown-content, main.tags .btn,
 header.policy-research, header.policy-research .navbar .dropdown-content, main.policy-research .btn {
-    background-color: #e64a19;
+    background-color: #dd2c00;
 }
 main.press-media a,
 main.tags a,
 main.policy-research a,
 main.policy-research button {
-    color: #e64a19 !important;
+    color: #dd2c00 !important;
 }
 
 main.policy-research share-button a,
