--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,37 +1,86 @@
 <!-- <img src="{{content_header_image}}" /> -->
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
             <br />
-            <h1 class="light center"><abbr title="Scottish Council for Voluntary Organisations">SCVO</abbr> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises</h1>
+            <h2 class="light center"><abbr title="Scottish Council for Voluntary Organisations">SCVO</abbr> is the membership organisation for Scotland's charities, voluntary organisations and social enterprises</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <h2>I'm looking for&hellip;</h2>
         </div>
     </div>
 
     <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-4">
-            <h4>Featured</h4>
-            <!-- <h2>Event / policy promotion</h2> -->
+            <!-- <h4><a [routerLink]="['/your-charity']" class="btn">Information on setting up and running an organisation</a></h4> -->
+            <h4>Information on setting up and running an organisation</h4>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-            <h4>Blogs</h4>
+            <h4>Jobs in the third sector</h4>
         </div>
         <div class="col-sm-12 col-md-6 col-lg-4">
-            <h4>What's new</h4>
+            <h4>Funding for my project</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-4">
+            <h4>News &amp; blogs</h4>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <h4>Training &amp; events</h4>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <h4>Latest jobs</h4>
         </div>
     </div>
 
     <div class="row">
         <div class="col-sm-12">
-            &nbsp;<br />
-            &nbsp;<br />
-            &nbsp;<br />
-            &nbsp;<br />
-            New website in development
-            &nbsp;<br />
-            &nbsp;<br />
-            &nbsp;<br />
-            &nbsp;<br />
-            &nbsp;<br />
+            <h2>Our services&hellip;</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-4">
+            <h4>Membership</h4>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <h4>Office space</h4>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <h4>Funding Scotland</h4>
+        </div>
+        <div class="col-sm-12 col-md-12 col-lg-4">
+            <h4>Goodmoves</h4>
+            <!-- <h2>Event / policy promotion</h2> -->
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <h4>Good HQ</h4>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <h4>Credit Union</h4>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12">
+            <h2>Projects &amp; campaigns&hellip;</h2>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-4">
+            <h4>Scottish Charity Awards</h4>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <h4>Open Government</h4>
+        </div>
+        <div class="col-sm-12 col-md-6 col-lg-4">
+            <h4>The Right Approach</h4>
         </div>
     </div>
 </div>
